--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,13 @@ nav{
     font-size: 30px;
     margin-bottom:30px;
 }
+.title-2{
+    padding-top:150px;
+    margin: 0 auto;
+    color:black;
+    font-size: 30px;
+    margin-bottom:30px;
+}
 
 .description{
     height:100px;
@@ -74,6 +81,7 @@ nav{
 .download{
     margin-top: 80px;
 }
+
 
 .download .btn-white, .btn-black{
     padding:20px 50px;
@@ -115,7 +123,7 @@ nav{
 
 }
 
-#top, #center, #bottom{
+#top, #center, #bottom, #final{
     width: 1280px;
     margin: auto;
 }
@@ -154,4 +162,17 @@ h2{
 
 main{
     margin:auto;
+}
+
+.cic{
+    text-align: center;
+}
+
+.paragraph-2{
+    max-width: 1280px;
+}
+
+.paragraph-3{
+    background-image: url(../img/stars.svg);
+    margin-bottom: 20px;
 }
